# CamCalib

./: .gitignore  CMakeLists.txt  README.md  calibrate.cpp  calibrate.h  main.py
calibration/: __init__.py  calibrate.py
examples/: CMakeLists.txt  calib.cpp  calib.py  calib_cv.cpp  calib_cv.py  load_calib.py  undistort.py
python/: main.py  setup.py
python/camcalib/: __init__.py  calibrate.py  distortion.py  extrinsic.py  homography.py  intrinsic.py  refine_all.py  results.py  types.py  utils.py
src/: calibrate.cpp
tools/: calib.py  collect_images.py
